--- a/tpc-resto-equipo-17B/Site.Master
+++ b/tpc-resto-equipo-17B/Site.Master
@@ -48,9 +48,13 @@
                 <div class="collapse navbar-collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
 
+                        <li class="nav-item"><a class="nav-link" runat="server" href="~/Default">Login</a></li>
+
                         <li class="nav-item"><a class="nav-link" runat="server" href="~/Articulos">Carta</a></li>
 
-                    <%--<li class="nav-item"><a class="nav-link" runat="server" href="~/">Inicio</a></li>--%>
+                        <li class="nav-item"><a class="nav-link" runat="server" href="~/Gerentes">Gerentes</a></li>
+
+                        <li class="nav-item"><a class="nav-link" runat="server" href="~/Meseros">Meseros</a></li>
 
                         <li class="nav-item"><a class="nav-link" runat="server" href="~/Contact">Contacto</a></li>
                     </ul>
