--- a/tpc-resto-equipo-17B/Site.Master
+++ b/tpc-resto-equipo-17B/Site.Master
@@ -52,7 +52,7 @@
 
                         <li class="nav-item"><a class="nav-link" runat="server" href="~/Articulos">Carta</a></li>
 
-                        <li class="nav-item"><a class="nav-link" runat="server" href="~/Gerentes">Gerentes</a></li>
+                        <li class="nav-item"><a class="nav-link" runat="server" href="~/ListarGerentes">Gerentes</a></li>
 
                         <li class="nav-item"><a class="nav-link" runat="server" href="~/Meseros">Meseros</a></li>
 
