--- a/tpc-resto-equipo-17B/Site.Master
+++ b/tpc-resto-equipo-17B/Site.Master
@@ -56,6 +56,8 @@
 
                         <li class="nav-item"><a class="nav-link" runat="server" href="~/Meseros">Meseros</a></li>
 
+                        <li class="nav-item"><a class="nav-link" runat="server" href="~/Mesas">Mesas</a></li>
+
                         <li class="nav-item"><a class="nav-link" runat="server" href="~/Contact">Contacto</a></li>
                     </ul>
                 </div>
